# face-atlas-ar

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/face/atlas/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: face_mesh.frag  face_mesh.vert
app/src/main/cpp/: CMakeLists.txt  arController.cpp  arController.h  native-lib.cpp
app/src/main/cpp/GLPipeline/: Mesh.h  Shader.h  Texture.h
app/src/main/cpp/Jnis/: jni_interface.cpp  jni_interface.h  jni_main.h
app/src/main/cpp/Renderers/: FaceMeshRenderer.cpp  FaceMeshRenderer.h  PlaneRenderer.cpp  PlaneRenderer.h  PointCloudRenderer.cpp  PointCloudRenderer.h  backgroundRenderer.cpp  backgroundRenderer.h  lineRenderer.cpp  lineRenderer.h  screenQuad.cpp  screenQuad.h
app/src/main/cpp/Utils/: assetLoader.cpp  assetLoader.h  common.h
app/src/main/java/face/atlas/: GLActivity.java  JNIInterface.java  MainActivity.java
app/src/main/java/face/atlas/Utils/: CameraPermissionHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/face/atlas/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
